# servicerestarter

./: Cargo.toml  README.md
src/: args.rs  extensions.rs  logging.rs  main.rs  registry.rs  service_control.rs  service_running.rs  wait_stopper.rs  windows_utils.rs
