[package]
name = "servicerestarter"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = { version = "1.3" }
chrono = { version = "0.4" }
from-to-repr = { version = "0.1" }
log = { version = "0.4", features = ["std"] }
once_cell = { version = "1.11" }
windows = { version = "0.37", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Environment", "Win32_System_Registry", "Win32_System_Services", "Win32_System_SystemServices"] }
